# phd

./: .buildinfo  .gitignore  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  abstract.html  content.html  front.html  genindex.html  lists.html  objects.inv  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.cfg
.github/workflows/: deploy.yml
_sources/: abstract.md  lists.md
_sources/chapters/: discussion.md  introduction.md
_sources/chapters/hypothesis/: goals.md
_sources/chapters/labbing/: intro.md  methods.md  results.md
_sources/chapters/measurements/: discussion.md  intro.md  measurements.md  methods.md  results.ipynb  results.md
_sources/chapters/methods/: imaging.ipynb
_sources/chapters/traits/: intro.md
_static/: custom.css
chapters/: bibliography.html  discussion.html  introduction.html  results.html
chapters/hypothesis/: goals.html  objectives.html
chapters/labbing/: discussion.html  intro.html  labbing.html  methods.html  results.html  supplementary.html
chapters/measurements/: discussion.html  intro.html  measurements.html  methods.html  results.html
chapters/methods/: imaging.html  methods.html  questionnaire.html
chapters/traits/: discussion.html  intro.html  methods.html  results.html  traits.html
phd/: _config.yml  _toc.yml  abstract.md  content.md  discussion.md  front.md  goals.md  lists.md  references.bib
phd/_build/.doctrees/: content.doctree  environment.pickle  intro.doctree  markdown.doctree  notebooks.doctree
phd/chapters/: bibliography.md  discussion.md  goals.md  results.md
src/book/: _config.yml  _toc.yml  lists.md  references.bib
src/phd.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
(+121 files in other folders)
