[metadata]
name = phd
version = 0.1.0
author = Zvi Baratz
author_email = z.baratz@gmail.com
description = Supplementary code for my Jupyter Book PhD thesis
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_files = LICENSE
keywords = phd, research, thesis, dissertation, jupyterbook
url = https://github.com/ZviBaratz/phd
project_urls =
    Source = https://github.com/ZviBaratz/phd/
    Bug Reports = https://github.com/ZviBaratz/phd/issues/
classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3 :: Only

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6, <4
install_requires =
    ghp-import
    jupyter-book
    matplotlib
    numpy
    pandas

[options.extras_require]
all =
    ghp-import
    jupyter-book
    matplotlib
    numpy
    pandas
    ipython
    jupyterlab_code_formatter
    jupyter_nbextensions_configurator
dev =
    black
    flake8
    ipython
    jupyterlab_code_formatter
    jupyter_nbextensions_configurator

[options.packages.find]
where = src

[flake8]
max-complexity = 10
exclude =
    __pycache__,
    .git,
    .pytest_cache,
    .tox,
    build,
    dist,
    tests,
    venv
per-file-ignores =
    */__init__.py: F401
    */messages.py: E501